k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: neom-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: api

    spec:
      serviceAccountName: api-sa      
      containers:
        - name: api
          image: ghcr.io/adewalealli/neom-platform-lab-api:f940ee6c54a9b270452fe7786a772a0b301f7a39
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
